--- a/TH1/index.html
+++ b/TH1/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <p>Welcome to the showwww</p>
+    <p><b>Welcome to the showwww</b></p>
     <input type="number" id="addNum">
     <button onclick="add()">Add</button>
     <button onclick="display()">Display</button>
