--- a/TH5/index.html
+++ b/TH5/index.html
@@ -16,13 +16,13 @@
         for (let i = arr.length - 1; i >= 0; i--) {
             reverseOne.push(arr[i]);
         }
-        console.log(reverseOne)
+        document.write(reverseOne)
         // cách 2
-        let reverseTwo = [];
-        for (let i = 0; i < arr.length; i++) {
-            reverseTwo.unshift(arr[i]);                  
-        }
-        console.log(reverseTwo);
+        // let reverseTwo = [];
+        // for (let i = 0; i < arr.length; i++) {
+        //     reverseTwo.unshift(arr[i]);                  
+        // }
+        // console.log(reverseTwo);
     </script>
 </body>
 
