--- a/BT1/index3.html
+++ b/BT1/index3.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <p>Mời anh huy hiếu zô đánh liên minh nè</p>
+    <p><b>LET'S START</b></p>
     <input type="text" id="input">
     <span id="output" style="color:rgb(8, 80, 80)"></span>
     <script>
